<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fitness_tracker"
            android:paddingTop="30dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#222222" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics"
            android:textSize="16sp"
            android:textColor="#666666"
            android:layout_marginTop="4dp" />

        <!-- Картка калорій -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="#FF6B1A">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories_burned"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/caloriesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories_number"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="42sp"
                android:layout_marginTop="16dp" />

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:layout_marginTop="20dp"
                style="?android:attr/progressBarStyleHorizontal"
                android:progress="70"
                android:max="100" />

        </LinearLayout>

        <!-- Дві картки -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <!-- Тренування -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="#98F24A">

                <TextView
                    android:text="@string/workouts"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/workoutCount"
                    android:text="@string/workouts_num"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:layout_marginTop="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <!-- Час -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="#FFD54F">

                <TextView
                    android:text="@string/minutes"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/minutesText"
                    android:text="@string/workouts_time"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:layout_marginTop="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <!-- Кнопки -->
        <Button
            android:id="@+id/addWorkoutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_workout"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_marginTop="24dp"
            android:backgroundTint="#2962FF" />

        <Button
            android:id="@+id/openListBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/workout_list"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_marginTop="12dp"
            android:backgroundTint="#222222" />

    </LinearLayout>
